--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5994,27 +5994,25 @@ h1.success, h2.success, h3.success, h4.success, h5.success {
     border-radius: 1rem; }
     #delivery-times .container ul {
       margin-top: 0.9375rem; }
-    #delivery-times .container li.delivery-time {
-      height: 11.875rem; }
-      #delivery-times .container li.delivery-time:first-of-type h1 {
-        border-top-left-radius: 1rem; }
-      #delivery-times .container li.delivery-time:nth-of-type(2) h1 {
-        border-top-right-radius: 1rem; }
-      #delivery-times .container li.delivery-time h1 {
-        display: block;
-        box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
-        min-width: 223px !important;
-        height: 100%;
-        font-size: 3.75rem;
-        line-height: 11.25rem;
-        text-align: center;
-        margin-bottom: 1.875rem !important; }
-      #delivery-times .container li.delivery-time.active h1 {
-        background-color: #faea06;
-        color: black !important; }
-      #delivery-times .container li.delivery-time.inactive h1 {
-        background-color: #0779be;
-        color: white; }
+    #delivery-times .container li.delivery-time:first-of-type h1 {
+      border-top-left-radius: 1rem;
+      border-top-right-radius: 1rem; }
+    #delivery-times .container li.delivery-time:last-of-type h1 {
+      border-bottom-left-radius: 1rem;
+      border-bottom-right-radius: 1rem; }
+    #delivery-times .container li.delivery-time h1 {
+      display: block;
+      box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.5);
+      min-width: 223px !important;
+      font-size: 3.75rem;
+      line-height: 10rem;
+      text-align: center; }
+    #delivery-times .container li.delivery-time.active h1 {
+      background-color: #faea06;
+      color: black !important; }
+    #delivery-times .container li.delivery-time.inactive h1 {
+      background-color: #0779be;
+      color: white; }
     #delivery-times .container a.cancel {
       border-bottom-left-radius: 1rem;
       border-bottom-right-radius: 1rem; }
@@ -6782,10 +6780,10 @@ main#splash {
   background-color: rgba(0, 0, 0, 0.75);
   padding-top: 3rem; }
 
-body#countdown {
+#count-down-wrapper {
   width: 100%;
-  height: 100%;
-  position: absolute;
+  height: 2000px;
+  position: fixed;
   top: 0;
   left: 0;
   background: #1e5799;
@@ -6804,7 +6802,7 @@ body#countdown {
   /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#202225',GradientType=1 );
   /* IE6-9 fallback on horizontal gradient */ }
-  body#countdown #flash-modal {
+  #count-down-wrapper #flash-modal {
     display: none; }
 
 #countdown-logo {
@@ -6868,11 +6866,11 @@ p.banner {
     width: 95%;
     text-align: right; }
 
-#count-down-wrapper {
-  height: 2000px; }
-
 #mobile-countdown {
   margin-top: 33%; }
+
+#countdown.slide-down {
+  transform: translateY(2000px); }
 
 html, nav, body, main, footer {
   overflow: auto; }
