--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5316,7 +5316,8 @@ textarea.note {
   height: 17.8125rem;
   width: 15.85938rem;
   vertical-align: top;
-  overflow-y: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
   padding: 0.625rem;
   background-color: #d2d2d2;
   background: whitesmoke;
@@ -5341,7 +5342,6 @@ textarea.note {
       transform: rotate(540deg); }
   #monthly-content-wrapper #launch-special h1 {
     position: absolute;
-    z-index: 10000;
     font-size: 1rem;
     padding: 0.5rem 4rem 0.2rem 4rem;
     border: 2px solid white;
