--- a/webroot/scss/globals.scss
+++ b/webroot/scss/globals.scss
@@ -245,7 +245,8 @@ textarea.note { height:2rem;}
   height: $monthly-content-wrapper-height;
   width: $monthly-content-wrapper-width;
   vertical-align: top;
-  overflow-y:scroll;
+  overflow-x:hidden;
+  overflow-y:auto;
   padding: $medium-padding;
   @include orb-card-gradient;
   &.slide-down {
@@ -255,7 +256,7 @@ textarea.note { height:2rem;}
   #launch-special {
     h1 {
       position:absolute;
-      z-index:10000;
+//      z-index:10000;
       font-size:1rem;
       padding: 0.5rem 4rem 0.2rem 4rem;
       border:2px solid $white;
