--- a/webroot/scss/typography.scss
+++ b/webroot/scss/typography.scss
@@ -281,6 +281,10 @@ span.icon-hn-inline {
 .icon-f-cheeses:before {
   content: "6";
 }
+.icon-appetizers:before {
+  content: "7";
+}
+
 
 
 @mixin font-faces() {
